<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bedoya.esau.yarumaltour3.TexasFragment"
    android:background="@color/fondo">

    <LinearLayout
            style="@style/linearLayoutStyle">

            <TextView
               style="@style/textViewStyle.Title"
                android:text="@string/texas"/>
            <TextView
               style="@style/textViewStyle.Content"
                android:text="@string/ttexas"/>
            <TextView
               style="@style/textViewStyle.Content"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:text="@string/utexas"/>
            <ImageView
                style="@style/imageViewStyle"
                android:src="@drawable/bar_texas"/>

        </LinearLayout>



</FrameLayout>
