<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bedoya.esau.yarumaltour3.MisonFragment"
    android:background="@color/fondo">



        <LinearLayout
           style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewStyle.Title"
                android:text="@string/mison" />
            <TextView
                style="@style/textViewStyle.Content"
                android:text="@string/tmison"/>
            <TextView
                style="@style/textViewStyle.Content"
                android:textColor="@color/blue"
                android:text="@string/umison"
                android:layout_gravity="center"/>
            <ImageView
               style="@style/imageViewStyle"
                android:src="@drawable/mi_son"/>

        </LinearLayout>



</FrameLayout>
